syntax ="proto3";

package comment;

option go_package = "./pkg/pb";

service Comments{
    rpc CreateComment(CommentRequest) returns (CommentResponse) {};
}

message CommentRequest {
    string comment = 1;
    int32 userId = 2;
    int32 reviewId = 3;
}

message CommentResponse {
    string status = 1;

}